# Reach

./: .gitignore  CMakeLists.txt  README.md
docs/: DesignDecisions.md  troubleshooting.md
src/: CMakeLists.txt  basic.glade  gui.cpp  gui.h  helloworld.cc  helloworld.h  importwindow.cpp  importwindow.h  main.cc  main.cpp  reach.glade  ui.gresource.xml.in  util.cpp  util.h
src/app/: contactsmanager.cpp  contactsmanager.h  filemanager.cpp  filemanager.h
src/model/: contact.cpp  contact.h  field.cpp  field.h  textfield.cpp  textfield.h
src/resources/: reach.glade  ui.gresource.xml.in
src/ui/: gui.cpp  gui.h
test/: CMakeLists.txt  gui.cpp
test/model/: testfield.cpp
test/ui/: gui.cpp
